@@ -355,6 +355,32 @@ FROM
   ancestor_slice(interesting_slices.id) AS ancestor ON ancestor.depth = 0
 ```
 
+### Ancestor slice by stack
+ancestor_slice_by_stack is a custom operator table that takes a
+[slice table's stack_id column](/docs/analysis/sql-tables.autogen#slice) and
+finds all slice ids with that stack_id, then, for each id it computes
+all the ancestor slices similarly to
+[ancestor_slice](/docs/analysis/trace-processor#ancestor-slice).
+
+The returned format is the same as the
+[slice table](/docs/analysis/sql-tables.autogen#slice)
+
+For example, the following finds the top level slice of all slices with the
+given name.
+
+```sql
+CREATE VIEW interesting_stack_ids AS
+SELECT stack_id
+FROM slice WHERE name LIKE "%interesting slice name%";
+
+SELECT
+  *
+FROM
+  interesting_stack_ids LEFT JOIN
+  ancestor_slice_by_stack(interesting_stack_ids.stack_id) AS ancestor
+  ON ancestor.depth = 0
+```
+
 ### Descendant slice
 descendant_slice is a custom operator table that takes a
 [slice table's id column](/docs/analysis/sql-tables.autogen#slice) and
