@@ -6,6 +6,9 @@ relationship_tables.textproto ancestor_slice.sql ancestor_slice.out
 # Descendant slice table.
 relationship_tables.textproto descendant_slice.sql descendant_slice.out
 
+# Ancestor slice by stack table.
+ancestor_slice_by_stack.textproto ancestor_slice_by_stack.sql ancestor_slice_by_stack.out
+
 # Connected/Following/Perceeding flow table.
 connected_flow_data.json connected_flow.sql connected_flow.out
 
